Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2920

Block cache capacity validator shouldn't run on an NVM block cache

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.11.0
    • 1.11.0
    • cfile

    Description

      As part of KUDU-2318, we added a validator to enforce that the block cache capacity does not exceed the process' memory pressure threshold (defaults to 60% of the overall memory limit). This makes sense for a DRAM-based block cache, which competes for DRAM with Kudu (and thus its capacity should be a fraction of the overall limit).

      However, this doesn't make sense for NVM-based block caches, because the pool of available NVM is distinct from the pool of available DRAM. In this case, there really shouldn't be any relationship between the overall memory limit and the block cache capacity.

      We should relax the validator for NVM-based block caches.

      Attachments

        Activity

          People

            vladimir_committer Vladimir Verjovkin
            adar Adar Dembo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: