KUDU-2920 Block cache capacity validator couldn't run on an NVM block cache

Validator should fail for options:
--block_cache_type=DRAM
--block_cache_capacity_mb=1000000
and succeed for options:
--block_cache_type=NVM
--block_cache_capacity_mb=1000000
--nvm_cache_path=/path/to/your/tmp/dir
where 1000000 means "size of cache bigger than RAM" (1000GB)

Change-Id: I9f50e9dd901280b5c32576e43165292299922995
Reviewed-on: http://gerrit.cloudera.org:8080/14212
Tested-by: Kudu Jenkins
Reviewed-by: Adar Dembo <adar@cloudera.com>